[gd_scene load_steps=5 format=3 uid="uid://cjwsqjuayve82"]

[ext_resource type="Script" path="res://Scripts/game_task_3.gd" id="1_3pdl6"]
[ext_resource type="Texture2D" uid="uid://lyui542c83ya" path="res://ASSETS/windows/windows_border - Copy.png" id="1_e4shb"]
[ext_resource type="Texture2D" uid="uid://c7rmim5y62a2n" path="res://ASSETS/windows/windows_border.png" id="2_tt6xe"]
[ext_resource type="Texture2D" uid="uid://qfdp5lhuq2qv" path="res://ASSETS/Upgrade/items_border.png" id="3_4wu0v"]

[node name="GameTask3" type="Node2D"]
script = ExtResource("1_3pdl6")

[node name="MAIN" type="Sprite2D" parent="."]
position = Vector2(960, 539)
texture = ExtResource("1_e4shb")

[node name="WindowsBorder" type="Sprite2D" parent="."]
position = Vector2(1383.5, 567)
scale = Vector2(0.551563, 0.940741)
texture = ExtResource("2_tt6xe")

[node name="QUESTION" type="Label" parent="WindowsBorder"]
modulate = Color(0, 0, 0, 1)
offset_left = -912.861
offset_top = -517.677
offset_right = -600.861
offset_bottom = -288.677
scale = Vector2(4.00411, 3.56386)
text = "Pick a number"
autowrap_mode = 3

[node name="SCAM" type="Button" parent="WindowsBorder"]
modulate = Color(1, 0, 0, 1)
offset_left = 465.0
offset_top = 394.0
offset_right = 711.0
offset_bottom = 504.0
scale = Vector2(1.90297, 1.05213)
theme_override_font_sizes/font_size = 55
text = "REPORT"

[node name="REAL" type="Button" parent="WindowsBorder"]
modulate = Color(0.144384, 0.818793, 7.70092e-07, 1)
offset_left = -144.0
offset_top = 392.0
offset_right = 143.0
offset_bottom = 504.0
scale = Vector2(1.70964, 1.03876)
theme_override_font_sizes/font_size = 55
text = "REAL"

[node name="RETURN" type="Button" parent="."]
offset_left = 1795.0
offset_top = 3.0
offset_right = 1915.0
offset_bottom = 120.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 852.0
offset_top = 64.0
offset_right = 1299.0
offset_bottom = 2786.0
scale = Vector2(-1.89448, 0.370509)

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect1"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect2" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect2"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect3" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect3"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect4" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect4"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect5" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect5"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect5"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect5"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect6" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect6"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect6"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect6"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect7" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect7"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect7"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect7"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect8" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect8"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect8"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect8"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect9" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect9"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect9"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect9"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect10" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect10"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect10"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect10"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect11" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect11"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect11"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect11"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect12" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect12"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect12"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect12"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect13" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect13"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect13"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect13"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect14" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect14"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect14"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect14"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect15" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect15"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect15"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect15"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect16" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect16"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect16"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect16"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect17" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect17"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect17"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect17"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect18" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect18"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect18"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect18"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect19" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect19"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect19"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect19"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="TextureRect20" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4wu0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect20"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 360.681
offset_top = 41.5832
offset_right = 467.681
offset_bottom = 64.5832
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Name"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect20"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 363.559
offset_top = 361.774
offset_right = 470.559
offset_bottom = 384.774
scale = Vector2(-1.71705, 11.6992)
text = "LOREm Number"

[node name="uid" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect20"]
layout_mode = 0
offset_left = 716.292
offset_top = 99.8626
offset_right = 756.292
offset_bottom = 122.863

[node name="correct" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 752.0
offset_top = 8.0
offset_right = 883.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 34
text = "Correct:"

[connection signal="pressed" from="WindowsBorder/SCAM" to="." method="_on_scam_pressed"]
[connection signal="pressed" from="WindowsBorder/REAL" to="." method="_on_real_pressed"]
[connection signal="pressed" from="RETURN" to="." method="_on_return_pressed"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect1" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect2" to="." method="_on_texture_rect_2_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect3" to="." method="_on_texture_rect_3_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect4" to="." method="_on_texture_rect_4_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect5" to="." method="_on_texture_rect_5_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect6" to="." method="_on_texture_rect_6_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect7" to="." method="_on_texture_rect_7_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect8" to="." method="_on_texture_rect_8_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect9" to="." method="_on_texture_rect_9_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect10" to="." method="_on_texture_rect_10_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect11" to="." method="_on_texture_rect_11_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect12" to="." method="_on_texture_rect_12_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect13" to="." method="_on_texture_rect_13_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect14" to="." method="_on_texture_rect_14_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect15" to="." method="_on_texture_rect_15_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect16" to="." method="_on_texture_rect_16_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect17" to="." method="_on_texture_rect_17_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect18" to="." method="_on_texture_rect_18_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect19" to="." method="_on_texture_rect_19_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureRect20" to="." method="_on_texture_rect_20_mouse_entered"]
